test/error/ObjectStgNotClass.fu
public class Test
{
	public static bool Run()
	{
		string<int>() o; //ERROR: 'string' is not a class
		return true;
	}
}
